Modify names of libraries

--- a/SampleProject.Tests/SampleApp.Tests.csproj
+++ b/SampleProject.Tests/SampleApp.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E22C2B49-D9E7-4736-859A-343217278C2D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StoreApp.Tests</RootNamespace>
-    <AssemblyName>StoreApp.Tests</AssemblyName>
+    <RootNamespace>SampleApp.Tests</RootNamespace>
+    <AssemblyName>SampleApp.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
